update h2 with my name

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <link rel="stylrsheet" href="style.css">
     </head>
     <body>
-        <h2></h2>
+        <h2>ernesto valadez</h2>
     </body>
 </html>
